Updated buttons, forms, and layouts

--- a/projects/amen/views/dashboard/index.html
+++ b/projects/amen/views/dashboard/index.html
@@ -66,7 +66,7 @@
                     </svg>
                   </span>
                   <!-- <a href="" class="button tertiary">Edit</a> -->
-                  <button class="tertiary" disabled>Edit</button>
+                  <!-- <button class="tertiary" disabled>Edit</button> -->
                 </span>
               </li>
               <li>Lab Results
@@ -86,7 +86,7 @@
                       <path d="M12 15v-10" />
                     </svg>
                   </span>
-                  <a href="views/mapping/lab-results/index.html" class="button tertiary">Edit</a>
+                  <!-- <a href="views/mapping/lab-results/index.html" class="button tertiary">Edit</a> -->
                   <!-- <button class="tertiary" disabled>Edit</button> -->
                 </span>
               </li>
@@ -108,10 +108,13 @@
                     </svg>
                   </span>
                   <!-- <a href="" class="button tertiary">Edit</a> -->
-                  <button class="tertiary" disabled>Edit</button>
+                  <!-- <button class="tertiary" disabled>Edit</button> -->
                 </span>
               </li>
             </ul>
+            <div class="button-group center">
+              <a href="views/mapping/index.html" class="button">Edit Mapping</a>
+            </div>
           </div>
         </div>
       </section>
