--- a/style/_scss/_buttons.scss
+++ b/style/_scss/_buttons.scss
@@ -1,6 +1,7 @@
 // BUTTONS
 button,
-.button {
+.button,
+a.button {
   display: inline-flex;
   align-items: center;
   width: max-content;
@@ -29,7 +30,8 @@ button,
 }
 
 button.secondary,
-.button.secondary {
+.button.secondary,
+a.button.secondary {
   color: $color--action-light;
   background-color: transparent;
 
@@ -41,7 +43,8 @@ button.secondary,
 }
 
 button.tertiary,
-.button.tertiary {
+.button.tertiary,
+a.button.tertiary {
   padding: 0 $spacing-4;
   border: none;
   color: $color--action-light;
@@ -56,7 +59,8 @@ button.tertiary,
 
 // DISABLED BUTTONS
 button.primary:disabled,
-.button.primary:disabled {
+.button.primary:disabled,
+a.button.primary:disabled {
   border-color: $color--status-disabled;
   background-color: $color--status-disabled;
 
@@ -68,7 +72,8 @@ button.primary:disabled,
 }
 
 button.secondary:disabled,
-.button.secondary:disabled {
+.button.secondary:disabled,
+a.button.secondary:disabled {
   border-color: $color--status-disabled;
   color: $color--status-disabled;
 
@@ -80,7 +85,8 @@ button.secondary:disabled,
 }
 
 button.tertiary:disabled,
-.button.tertiary:disabled {
+.button.tertiary:disabled,
+a.button.tertiary:disabled {
   color: $color--status-disabled;
 
   &:hover,
@@ -94,7 +100,8 @@ button.tertiary:disabled,
 html.dark {
 
   button,
-  .button {
+  .button,
+  a.button {
     border-color: $color--action-dark;
     color: $color--text-light;
     background-color: $color--action-dark;
@@ -108,7 +115,8 @@ html.dark {
   }
 
   button.secondary,
-  .button.secondary {
+  .button.secondary,
+  a.button.secondary {
     color: $color--action-dark;
     color: $color--text-light;
     background-color: transparent;
@@ -122,7 +130,8 @@ html.dark {
   }
 
   button.tertiary,
-  .button.tertiary {
+  .button.tertiary,
+  a.button.tertiary {
     padding: 0 $spacing-4;
     border: none;
     border-radius: 0;
@@ -136,7 +145,8 @@ html.dark {
   }
 
   button.primary:disabled,
-  .button.primary:disabled {
+  .button.primary:disabled,
+  a.button.primary:disabled {
     border-color: $color--status-disabled;
     background-color: $color--status-disabled;
 
@@ -148,7 +158,8 @@ html.dark {
   }
 
   button.secondary:disabled,
-  .button.secondary:disabled {
+  .button.secondary:disabled,
+  a.button.secondary:disabled {
     border-color: $color--status-disabled;
     color: $color--status-disabled;
 
@@ -160,7 +171,8 @@ html.dark {
   }
 
   button.tertiary:disabled,
-  .button.tertiary:disabled {
+  .button.tertiary:disabled,
+  a.button.tertiary:disabled {
     color: $color--status-disabled;
 
     &:hover,
@@ -173,7 +185,8 @@ html.dark {
 
 // ICON BUTTONS
 button.icon,
-.button.icon {
+.button.icon,
+a.button.icon {
   padding: $spacing-4;
   border: 0;
   border-radius: 100%;
@@ -225,7 +238,8 @@ button.icon,
 html.dark {
 
   button.icon,
-  .button.icon {
+  .button.icon,
+  a.button.icon {
     color: $color--bg-light;
     background-color: rgba(230, 230, 230, 0);
 
@@ -259,7 +273,8 @@ html.dark {
   justify-content: flex-end;
 
   button:last-of-type,
-  .button:last-of-type {
+  .button:last-of-type,
+  a.button:last-of-type {
     margin-right: 0;
   }
 }
