--- a/style/master.scss
+++ b/style/master.scss
@@ -8,4 +8,6 @@
 @import "_scss/header";
 @import "_scss/footer";
 @import "_scss/navigation";
+@import "_scss/drawers";
 @import "_scss/buttons";
+@import "_scss/utilities";
