--- a/projects/amen/views/mapping/index.html
+++ b/projects/amen/views/mapping/index.html
@@ -41,77 +41,103 @@
   </header>
   <main>
     <article>
-      <h1>Mapping</h1>
+      <h1>Yale Medical Center INT-1 Mapping</h1>
       <section>
-        <h2>Yale Medical Center</h2>
-        <div class="row cards">
-          <div class="card">
-            <h3>Yale Medical Center INT-1</h3>
-            <ul class="options">
-              <li>ADT Patient Data
-                <span class="action">
-                  <span class="status invalid">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                      stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
-                      class="icon icon-tabler icons-tabler-outline icon-tabler-check valid">
-                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                      <path d="M5 12l5 5l10 -10"></path>
-                    </svg>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                      stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
-                      class="icon icon-tabler icons-tabler-outline icon-tabler-exclamation-mark invalid">
-                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                      <path d="M12 19v.01"></path>
-                      <path d="M12 15v-10"></path>
-                    </svg>
-                  </span>
-                  <!-- <a href="" class="button tertiary">Edit</a> -->
-                  <button class="tertiary" disabled="">Edit</button>
-                </span>
+        <h2>Active Entities</h2>
+        <div class="row cards align-start">
+          <div class="card column-12">
+            <!-- <h3>Mapping and Transformation</h3> -->
+            <h4>Patient</h4>
+            <ul class="mapping">
+              <li>
+                <span class="field">Field</span>
+                <span class="element">Element</span>
+                <span class="preview">Preview</span>
               </li>
-              <li>Lab Results
-                <span class="action">
-                  <span class="status valid">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                      stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
-                      class="icon icon-tabler icons-tabler-outline icon-tabler-check valid">
-                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                      <path d="M5 12l5 5l10 -10"></path>
-                    </svg>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                      stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
-                      class="icon icon-tabler icons-tabler-outline icon-tabler-exclamation-mark invalid">
-                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                      <path d="M12 19v.01"></path>
-                      <path d="M12 15v-10"></path>
-                    </svg>
-                  </span>
-                  <a href="views/mapping/lab-results/index.html" class="button tertiary">Edit</a>
-                  <!-- <button class="tertiary" disabled>Edit</button> -->
-                </span>
+              <li>
+                <span class="field">MRN</span>
+                <span class="element"><code>PID.2</code></span>
+                <span class="preview">E00000329</span>
               </li>
-              <li>Order Requests
-                <span class="action">
-                  <span class="status invalid">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                      stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
-                      class="icon icon-tabler icons-tabler-outline icon-tabler-check valid">
-                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                      <path d="M5 12l5 5l10 -10"></path>
-                    </svg>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                      stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
-                      class="icon icon-tabler icons-tabler-outline icon-tabler-exclamation-mark invalid">
-                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                      <path d="M12 19v.01"></path>
-                      <path d="M12 15v-10"></path>
-                    </svg>
-                  </span>
-                  <!-- <a href="" class="button tertiary">Edit</a> -->
-                  <button class="tertiary" disabled="">Edit</button>
-                </span>
+              <li>
+                <span class="field">Name</span>
+                <span class="element"><code>PID-5.2 + PID-5.1</code></span>
+                <span class="preview">TOM BLUEAPPLE</span>
               </li>
             </ul>
+            <h4>Location</h4>
+            <ul class="mapping">
+              <li>
+                <span class="field">Field</span>
+                <span class="element">Element</span>
+                <span class="preview">Preview</span>
+              </li>
+              <li>
+                <span class="field">Unit</span>
+                <span class="element"><code>PV-3.1</code></span>
+                <span class="preview">ICU</span>
+              </li>
+              <li>
+                <span class="field">Room</span>
+                <span class="element"><code>PV-3.2</code></span>
+                <span class="preview">101</span>
+              </li>
+              <li>
+                <span class="field">Bed</span>
+                <span class="element"><code>PV-3.3</code></span>
+                <span class="preview">A</span>
+              </li>
+            </ul>
+            <h4>Lab Results<span class="utility"><a href="views/mapping/lab-results/index.html" class="button tertiary">Add Fields</a></span></h4>
+            <ul class="mapping">
+              <li>
+                <span class="field">Field</span>
+                <span class="element">Element</span>
+                <span class="preview">Preview</span>
+              </li>
+              <li>
+                <span class="field">Value Type</span>
+                <span class="element"><code>OBX[1]-3.2</code></span>
+                <span class="preview">HEPARIN</span>
+              </li>
+              <li>
+                <span class="field">Units</span>
+                <span class="element"><code>OBX[1]-6</code></span>
+                <span class="preview">SECONDS</span>
+              </li>
+              <li>
+                <span class="field">References Range</span>
+                <span class="element"><code>OBX[1]-7</code></span>
+                <span class="preview">9.6-11.2</span>
+              </li>
+              <li>
+                <span class="field">Observation Value</span>
+                <span class="element"><code>OBX[1]-5</code></span>
+                <span class="preview">12</span>
+              </li>
+            </ul>
+            <!-- <div class="button-group">
+              <a href="views/mapping/lab-results/index.html" class="button primary">Add Fields</a>
+            </div> -->
+          </div>
+        </div>
+        <div class="row">
+          <div class="column-12">
+            <h2>Raw Data</h2>
+            <pre>
+MSH|^~\&|LAB|NMC|||20201001091354-0400||ORU^R01|22064.1|D|2.3|
+PID|1|<em>E00000329</em>|M000000350||<em>BLUEAPPLE^TOM</em>||19711221|F||W|123 MAIN STREET^^SAINT ALBANS^VT^05478|||||S||V00000019513|
+PV1|1519|O|<em>ICU</em>^<em>101</em>^<em>A</em>|EL|||ZFINGJU^Fingergut^Judy^^^^MD|||||||PHY||||CLI|||||||||||||||||||||NMC||REG|||202010010910|
+OBR|1|1789^LAB|1789^LAB|PT^HEPARIN/INR^L|||202010010912|||||||202010010912||ZFINGJU^Zfingergut^Judy^^^^MD||||||||LAB|F||^^^^^R|BARNMI^Barnum^Michael^J.^^^MD|
+OBX|1|ST|PRO^<em>HEPARIN</em>^L|1|<em>12.0</em>|<em>SECONDS</em>|<em>9.6-11.2</em>|H||A^S|F|||202010010913|ML^MAIN LAB^L|
+NTE|1||Is patient on anticoagulant? N|
+OBX|2|ST|INR^INR^L|1|1.2||2.0-3.0|L||A^S|F|||202010010913|ML^MAIN LAB^L|
+NTE|2||INR value valid only on patients on stabilized warfarin|
+NTE|3||therapy.  The recommended therapeutic range for warfarin|
+NTE|4||(Coumadin) for most clinical indications is an INR of|
+NTE|5||2.0-3.0.  An INR of 2.5-3.5 is recommended for patients with|
+NTE|6||mechanical heart valves.|
+          </pre>
           </div>
         </div>
       </section>
