--- a/projects/amen/views/mapping/lab-results/index.html
+++ b/projects/amen/views/mapping/lab-results/index.html
@@ -41,134 +41,79 @@
   </header>
   <main>
     <article>
-      <h1>Lab Results</h1>
-      <h2>Active Entities</h2>
-      <div class="row cards align-start">
-        <div class="card column-9">
-          <h3>Mapping and Transformation</h3>
-          <h4>Patient</h4>
-          <ul class="mapping">
-            <li>
-              <span class="field">Field</span>
-              <span class="element">Element</span>
-              <span class="preview">Preview</span>
-            </li>
-            <li>
-              <span class="field">MRN</span>
-              <span class="element"><code>PID.2</code></span>
-              <span class="preview">E00000329</span>
-            </li>
-            <li>
-              <span class="field">Name</span>
-              <span class="element"><code>PID-5.2 + PID-5.1</code></span>
-              <span class="preview">TOM BLUEAPPLE</span>
-            </li>
-          </ul>
-          <h4>Location</h4>
-          <ul class="mapping">
-            <li>
-              <span class="field">Field</span>
-              <span class="element">Element</span>
-              <span class="preview">Preview</span>
-            </li>
-            <li>
-              <span class="field">Unit</span>
-              <span class="element"><code>PV-3.1</code></span>
-              <span class="preview">ICU</span>
-            </li>
-            <li>
-              <span class="field">Room</span>
-              <span class="element"><code>PV-3.2</code></span>
-              <span class="preview">101</span>
-            </li>
-            <li>
-              <span class="field">Bed</span>
-              <span class="element"><code>PV-3.3</code></span>
-              <span class="preview">A</span>
-            </li>
-          </ul>
-          <h4>Lab Results</h4>
-          <ul class="mapping">
-            <li>
-              <span class="field">Field</span>
-              <span class="element">Element</span>
-              <span class="preview">Preview</span>
-            </li>
-            <li>
-              <span class="field">Value Type</span>
-              <span class="element"><code>OBX[1]-3.2</code></span>
-              <span class="preview">HEPARIN</span>
-            </li>
-            <li>
-              <span class="field">Units</span>
-              <span class="element"><code>OBX[1]-6</code></span>
-              <span class="preview">SECONDS</span>
-            </li>
-            <li>
-              <span class="field">References Range</span>
-              <span class="element"><code>OBX[1]-7</code></span>
-              <span class="preview">9.6-11.2</span>
-            </li>
-            <li>
-              <span class="field">Observation Value</span>
-              <span class="element"><code>OBX[1]-5</code></span>
-              <span class="preview">12</span>
-            </li>
-          </ul>
+      <h1>Yale Medical Center INT-1 Lab Results</h1>
+      <section>
+        <h2>Edit Active Fields</h2>
+        <div class="row cards">
+          <div class="card">
+            <h3>Control Fields</h3>
+            <form id="yale-lab-results">
+              <fieldset class="toggle checklist">
+                <!-- <legend>Lab Results</legend> -->
+                <label for="yale-lab-result-result-id">Result ID <input type="checkbox" id="yale-lab-result-result-id"
+                    class="toggle" name="yale-lab-result-result-id" title="Result ID" value="Result ID"></label>
+                <label for="yale-lab-result-observation-timestamp">Observation Timestamp <input type="checkbox"
+                    id="yale-lab-result-observation-timestamp" class="toggle"
+                    name="yale-lab-result-observation-timestamp" title="Observation Timestamp"
+                    value="Observation Timestamp"></label>
+                <label for="yale-lab-result-observation-id">Observation ID <input type="checkbox"
+                    id="yale-lab-result-observation-id" class="toggle" name="yale-lab-result-observation-id"
+                    title="Observation ID" value="Observation ID"></label>
+                <label for="yale-lab-result-observation-sub-id">Observation Sub ID <input type="checkbox"
+                    id="yale-lab-result-observation-sub-id" class="toggle" name="yale-lab-result-observation-sub-id"
+                    title="Observation Sub ID" value="Observation Sub ID"></label>
+                <label for="yale-lab-result-observation-request-id">Observation Request ID <input type="checkbox"
+                    id="yale-lab-result-observation-request-id" class="toggle"
+                    name="yale-lab-result-observation-request-id" title="Observation Request ID"
+                    value="Observation Request ID"></label>
+                <label for="yale-lab-result-specimen-id">Specimen ID <input type="checkbox"
+                    id="yale-lab-result-specimen-id" class="toggle" name="yale-lab-result-specimen-id"
+                    title="Specimen ID" value="Specimen ID"></label>
+                <label for="yale-lab-result-observation-result-status">Observation Result Status <input type="checkbox"
+                    id="yale-lab-result-observation-result-status" class="toggle"
+                    name="yale-lab-result-observation-result-status" title="Observation Result Status"
+                    value="Observation Result Status"></label>
+                <label for="yale-lab-result-observation-value">Observation Value <input type="checkbox"
+                    id="yale-lab-result-observation-value" class="toggle" name="yale-lab-result-observation-value"
+                    title="Observation Value" value="Observation Value" checked=""></label>
+                <label for="yale-lab-result-references-range">References Range <input type="checkbox"
+                    id="yale-lab-result-references-range" class="toggle" name="yale-lab-result-references-range"
+                    title="References Range" value="References Range" checked=""></label>
+                <label for="yale-lab-result-units">Units <input type="checkbox" id="yale-lab-result-units"
+                    class="toggle" name="yale-lab-result-units" title="Units" value="Units" checked=""></label>
+                <label for="yale-lab-result-value-type">Value Type <input type="checkbox"
+                    id="yale-lab-result-value-type" class="toggle" name="yale-lab-result-value-type" title="Value Type"
+                    value="Value Type" checked=""></label>
+                <label for="yale-lab-result-priority">Priority <input type="checkbox" id="yale-lab-result-priority"
+                    class="toggle" name="yale-lab-result-priority" title="Priority" value="Priority"></label>
+                <label for="yale-lab-result-resulted-test">Resulted Test <input type="checkbox"
+                    id="yale-lab-result-resulted-test" class="toggle" name="yale-lab-result-resulted-test"
+                    title="Resulted Test" value="Resulted Test"></label>
+                <label for="yale-lab-result-result">Result <input type="checkbox" id="yale-lab-result-result"
+                    class="toggle" name="yale-lab-result-result" title="Result" value="Result"></label>
+                <label for="yale-lab-result-ordering-provider-id">Ordering Provider ID <input type="checkbox"
+                    id="yale-lab-result-ordering-provider-id" class="toggle" name="yale-lab-result-ordering-provider-id"
+                    title="Ordering Provider ID" value="Ordering Provider ID"></label>
+                <label for="yale-lab-result-patient-id">Patient ID <input type="checkbox"
+                    id="yale-lab-result-patient-id" class="toggle" name="yale-lab-result-patient-id" title="Patient ID"
+                    value="Patient ID"></label>
+                <label for="yale-lab-result-location-id">Location ID <input type="checkbox"
+                    id="yale-lab-result-location-id" class="toggle" name="yale-lab-result-location-id"
+                    title="Location ID" value="Location ID"></label>
+                <!-- <label for=""> <input type="checkbox" id="" class="toggle" name="" title="" value="" checked></label> -->
+                <!-- <label for=""> <input type="checkbox" id="" class="toggle" name="" title="" value="" checked></label> -->
+                <!-- <label for=""> <input type="checkbox" id="" class="toggle" name="" title="" value="" checked></label> -->
+              </fieldset>
+            </form>
+            <div class="button-group right">
+              <!-- <a href="views/mapping/index.html" class="button tertiary">Back to Mapping</a> -->
+              <button class="tertiary" onclick="history.back()">Back to Mapping</button>
+              <button class="secondary">Cancel</button>
+              <button class="primary">Save</button>
+            </div>
+          </div>
         </div>
-        <div class="card column-3">
-          <h3>Control Fields</h3>
-          <form id="yale-lab-results">
-            <fieldset class="toggle checklist">
-              <!-- <legend>
-                  <div class="button-group right">
-                    <button id="entities-none" class="tertiary">None</button>
-                    <button id="entities-all" class="tertiary">All</button>
-                  </div>
-                </legend> -->
-              <label for="yale-lab-result-result-id">Result ID <input type="checkbox" id="yale-lab-result-result-id" class="toggle" name="yale-lab-result-result-id" title="Result ID" value="Result ID"></label>
-              <label for="yale-lab-result-observation-timestamp">Observation Timestamp <input type="checkbox" id="yale-lab-result-observation-timestamp" class="toggle" name="yale-lab-result-observation-timestamp" title="Observation Timestamp" value="Observation Timestamp"></label>
-              <label for="yale-lab-result-observation-id">Observation ID <input type="checkbox" id="yale-lab-result-observation-id" class="toggle" name="yale-lab-result-observation-id" title="Observation ID" value="Observation ID"></label>
-              <label for="yale-lab-result-observation-sub-id">Observation Sub ID <input type="checkbox" id="yale-lab-result-observation-sub-id" class="toggle" name="yale-lab-result-observation-sub-id" title="Observation Sub ID" value="Observation Sub ID"></label>
-              <label for="yale-lab-result-observation-request-id">Observation Request ID <input type="checkbox" id="yale-lab-result-observation-request-id" class="toggle" name="yale-lab-result-observation-request-id" title="Observation Request ID" value="Observation Request ID"></label>
-              <label for="yale-lab-result-specimen-id">Specimen ID <input type="checkbox" id="yale-lab-result-specimen-id" class="toggle" name="yale-lab-result-specimen-id" title="Specimen ID" value="Specimen ID"></label>
-              <label for="yale-lab-result-observation-result-status">Observation Result Status <input type="checkbox" id="yale-lab-result-observation-result-status" class="toggle" name="yale-lab-result-observation-result-status" title="Observation Result Status" value="Observation Result Status"></label>
-              <label for="yale-lab-result-observation-value">Observation Value <input type="checkbox" id="yale-lab-result-observation-value" class="toggle" name="yale-lab-result-observation-value" title="Observation Value" value="Observation Value" checked=""></label>
-              <label for="yale-lab-result-references-range">References Range <input type="checkbox" id="yale-lab-result-references-range" class="toggle" name="yale-lab-result-references-range" title="References Range" value="References Range" checked=""></label>
-              <label for="yale-lab-result-units">Units <input type="checkbox" id="yale-lab-result-units" class="toggle" name="yale-lab-result-units" title="Units" value="Units" checked=""></label>
-              <label for="yale-lab-result-value-type">Value Type <input type="checkbox" id="yale-lab-result-value-type" class="toggle" name="yale-lab-result-value-type" title="Value Type" value="Value Type" checked=""></label>
-              <label for="yale-lab-result-priority">Priority <input type="checkbox" id="yale-lab-result-priority" class="toggle" name="yale-lab-result-priority" title="Priority" value="Priority"></label>
-              <label for="yale-lab-result-resulted-test">Resulted Test <input type="checkbox" id="yale-lab-result-resulted-test" class="toggle" name="yale-lab-result-resulted-test" title="Resulted Test" value="Resulted Test"></label>
-              <label for="yale-lab-result-result">Result <input type="checkbox" id="yale-lab-result-result" class="toggle" name="yale-lab-result-result" title="Result" value="Result"></label>
-              <label for="yale-lab-result-ordering-provider-id">Ordering Provider ID <input type="checkbox" id="yale-lab-result-ordering-provider-id" class="toggle" name="yale-lab-result-ordering-provider-id" title="Ordering Provider ID" value="Ordering Provider ID"></label>
-              <label for="yale-lab-result-patient-id">Patient ID <input type="checkbox" id="yale-lab-result-patient-id" class="toggle" name="yale-lab-result-patient-id" title="Patient ID" value="Patient ID"></label>
-              <label for="yale-lab-result-location-id">Location ID <input type="checkbox" id="yale-lab-result-location-id" class="toggle" name="yale-lab-result-location-id" title="Location ID" value="Location ID"></label>
-              <!-- <label for=""> <input type="checkbox" id="" class="toggle" name="" title="" value="" checked></label> -->
-              <!-- <label for=""> <input type="checkbox" id="" class="toggle" name="" title="" value="" checked></label> -->
-              <!-- <label for=""> <input type="checkbox" id="" class="toggle" name="" title="" value="" checked></label> -->
-            </fieldset>
-          </form>
-        </div>
-      </div>
-      <div class="row">
-        <div class="column-12">
-          <h2>Raw Data</h2>
-          <pre>
-MSH|^~\&|LAB|NMC|||20201001091354-0400||ORU^R01|22064.1|D|2.3|
-PID|1|<em>E00000329</em>|M000000350||<em>BLUEAPPLE^TOM</em>||19711221|F||W|123 MAIN STREET^^SAINT ALBANS^VT^05478|||||S||V00000019513|
-PV1|1519|O|<em>ICU</em>^<em>101</em>^<em>A</em>|EL|||ZFINGJU^Fingergut^Judy^^^^MD|||||||PHY||||CLI|||||||||||||||||||||NMC||REG|||202010010910|
-OBR|1|1789^LAB|1789^LAB|PT^HEPARIN/INR^L|||202010010912|||||||202010010912||ZFINGJU^Zfingergut^Judy^^^^MD||||||||LAB|F||^^^^^R|BARNMI^Barnum^Michael^J.^^^MD|
-OBX|1|ST|PRO^<em>HEPARIN</em>^L|1|<em>12.0</em>|<em>SECONDS</em>|<em>9.6-11.2</em>|H||A^S|F|||202010010913|ML^MAIN LAB^L|
-NTE|1||Is patient on anticoagulant? N|
-OBX|2|ST|INR^INR^L|1|1.2||2.0-3.0|L||A^S|F|||202010010913|ML^MAIN LAB^L|
-NTE|2||INR value valid only on patients on stabilized warfarin|
-NTE|3||therapy.  The recommended therapeutic range for warfarin|
-NTE|4||(Coumadin) for most clinical indications is an INR of|
-NTE|5||2.0-3.0.  An INR of 2.5-3.5 is recommended for patients with|
-NTE|6||mechanical heart valves.|
-          </pre>
-        </div>
-      </div>
+      </section>
     </article>
   </main>
   <footer>
