Updated AMEN Mapping page
Updated nav ul li to font-weight: 500; updated AMEN Mapping page

--- a/projects/amen/style/amen.css
+++ b/projects/amen/style/amen.css
@@ -1453,6 +1453,7 @@ nav ul {
 }
 nav ul li {
   padding: 0 var(--spacing--16) 0 0;
+  font-weight: 500;
 }
 nav ul li:last-of-type {
   padding: 0;
