--- a/projects/amen/views/mapping/index.html
+++ b/projects/amen/views/mapping/index.html
@@ -44,10 +44,13 @@
       <h1>Yale Medical Center INT-1 Mapping</h1>
       <section>
         <h2>Active Entities</h2>
+        <div class="button-group">
+          <button class="primary">Add Entities</button>
+        </div>
         <div class="row cards align-start">
           <div class="card column-12">
             <!-- <h3>Mapping and Transformation</h3> -->
-            <h4>Patient</h4>
+            <h4>Patient<span class="utility"><button class="tertiary" disabled>Add Fields</button></span></h4>
             <ul class="mapping">
               <li>
                 <span class="field">Field</span>
@@ -65,7 +68,7 @@
                 <span class="preview">TOM BLUEAPPLE</span>
               </li>
             </ul>
-            <h4>Location</h4>
+            <h4>Location<span class="utility"><button class="tertiary" disabled>Add Fields</button></span></h4>
             <ul class="mapping">
               <li>
                 <span class="field">Field</span>
