--- a/projects/amen/views/mapping/lab-results/index.html
+++ b/projects/amen/views/mapping/lab-results/index.html
@@ -106,8 +106,8 @@
               </fieldset>
             </form>
             <div class="button-group right">
-              <!-- <a href="views/mapping/index.html" class="button tertiary">Back to Mapping</a> -->
-              <button class="tertiary" onclick="history.back()">Back to Mapping</button>
+              <a href="views/mapping/index.html" class="button tertiary">Back to Mapping</a>
+              <!-- <button class="tertiary" onclick="history.back()">Back to Mapping</button> -->
               <button class="secondary">Cancel</button>
               <button class="primary">Save</button>
             </div>
