--- a/style/_scss/_buttons.scss
+++ b/style/_scss/_buttons.scss
@@ -45,7 +45,7 @@ a.button.secondary {
 button.tertiary,
 .button.tertiary,
 a.button.tertiary {
-  padding: 0 $spacing-4;
+  padding: 0;
   border: none;
   color: $color--action-light;
   background-color: transparent;
