--- a/projects/amen/views/mapping/lab-results/index.html
+++ b/projects/amen/views/mapping/lab-results/index.html
@@ -47,6 +47,10 @@
         <div class="row cards">
           <div class="card">
             <h3>Control Fields</h3>
+            <!-- <div class="button-group right">
+              <button class="tertiary">All</button>
+              <button class="tertiary">None</button>
+            </div> -->
             <form id="yale-lab-results">
               <fieldset class="toggle checklist">
                 <!-- <legend>Lab Results</legend> -->
