AMEN added pages for all entities
Updated understanding regarding initial application; samples updated to match Health Data Model core entities and fields Confluence document; added control panel pages for each type of entity.

--- a/projects/amen/style/amen.css
+++ b/projects/amen/style/amen.css
@@ -593,6 +593,7 @@ fieldset.toggle label {
   font-size: var(--p);
   font-weight: 400;
   line-height: 1.25;
+  white-space: normal;
 }
 fieldset.toggle label:last-of-type {
   margin: 0;
