--- a/style/_scss/_inputs.scss
+++ b/style/_scss/_inputs.scss
@@ -368,6 +368,7 @@ fieldset.toggle {
     font-size: $p;
     font-weight: 400;
     line-height: 1.25;
+    white-space: normal;
 
     &:last-of-type {
       margin: 0;
