AMEN Add Entities page added

--- a/projects/amen/views/mapping/index.html
+++ b/projects/amen/views/mapping/index.html
@@ -45,7 +45,8 @@
       <section>
         <h2>INT-1 Active Entities</h2>
         <div class="button-group">
-          <button class="primary">Add Entities</button>
+          <!-- <button class="primary">Add Entities</button> -->
+          <a href="views/mapping/entities/index.html" class="button primary">Add Entities</a>
         </div>
         <div class="row cards align-start">
           <div class="card column-12">
